<resources>
    <string name="app_name">口算糕手</string>
    <string name="key_always_true_answer">always_true_answer</string>
    <string name="key_always_true_oral">always_true_oral</string>
    <string name="key_auto_honor">auto_honor</string>
    <string name="key_auto_practice">auto_practice</string>
    <string name="key_auto_practice_quick">auto_practice_quick</string>
    <string name="key_auto_practice_cyclic">auto_practice_cyclic</string>
    <string name="key_auto_practice_cyclic_interval">auto_practice_cyclic_interval</string>
    <string name="key_auto_answer_config">auto_answer_config</string>
    <string name="key_custom_answer_config">custom_answer_config</string>
    <string name="key_quick_mode_must_win">quick_mode_must_win</string>
    <string name="key_quick_mode_interval">quick_mode_interval</string>
    <string name="key_pk_cyclic">pk_cyclic</string>
    <string name="key_pk_cyclic_interval">pk_cyclic_interval</string>
    <string name="key_pk_poetry_answer">pk_poetry_answer</string>
    <string name="key_pk_word_answer">pk_word_answer</string>
    <string name="key_pk_win">pk_win</string>
    <string name="key_github">github</string>
    <string name="key_version">version</string>
    <string name="key_goto_settings">goto_settings</string>
    <string name="key_debug">debug</string>
    <string name="key_remove_ads">remove_ads</string>
    <string name="key_no_nick_cooldown">no_nick_cooldown</string>
    <string name="key_honor_threads">honor_threads</string>
    <string name="key_honor_req_interval">honor_req_interval</string>
    <string name="key_honor_answer_time">honor_answer_time</string>
    <string name="key_honor_auto_count">honor_auto_count</string>
    <string name="key_practice_main_switch">practice_main_switch</string>
    <string name="key_auto_score_main_switch">auto_score_main_switch</string>
    <string name="key_pk_main_switch">pk_main_switch</string>
    <string name="key_clean_main_switch">clean_main_switch</string>
    <string name="key_honor_auto_count_main">honor_auto_count_main</string>
    <string name="key_double_nickname_length">double_nickname_length</string>
    <string name="key_remove_restriction_on_nickname">remove_restriction_on_nickname</string>
</resources>