<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="通用">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_always_true_oral"
            android:summary="手写输入识别结果永远为正确答案"
            android:title="一切输入视为正确答案(口算/手写)" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_double_nickname_length"
            android:title="双倍昵称长度" />
        <SwitchPreference
            android:defaultValue="false"
            android:title="解除昵称字符限制"
            android:key="@string/key_remove_restriction_on_nickname"
            android:summary="开启后，昵称可以使用任意非空白字符" />
    </PreferenceCategory>
    <PreferenceCategory android:title="练习">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_auto_honor"
            android:title="自动上分"
            android:disableDependentsState="true"
            android:summary="进入任意口算练习页面挂机即可"/>
        <EditTextPreference
            android:defaultValue="3"
            android:dependency="@string/key_auto_honor"
            android:key="@string/key_honor_threads"
            android:inputType="number"
            android:hint="1-10，默认3"
            android:title="上分并发线程数" />
        <EditTextPreference
            android:defaultValue="1000"
            android:dependency="@string/key_auto_honor"
            android:key="@string/key_honor_req_interval"
            android:inputType="number"
            android:hint="毫秒，200-10000，默认1000"
            android:title="每线程拉题间隔" />
        <EditTextPreference
            android:defaultValue="200"
            android:dependency="@string/key_auto_honor"
            android:key="@string/key_honor_answer_time"
            android:inputType="number"
            android:hint="毫秒，50-2000，默认200"
            android:title="每题模拟答题时间" />
        <EditTextPreference
            android:defaultValue="0"
            android:dependency="@string/key_auto_honor"
            android:key="@string/key_honor_auto_count"
            android:inputType="number"
            android:hint="0=每次弹框询问，>0=免弹框自动刷"
            android:title="免弹框自动刷次数" />
    </PreferenceCategory>
    <PreferenceCategory android:title="PK">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_pk_win"
            android:title="PK包赢"
            android:summary="诗词PK/单词PK 自动答题，稳赢" />
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="请选择"
            android:entries="@array/auto_answer_config"
            android:entryValues="@array/auto_answer_config_values"
            android:key="@string/key_auto_answer_config"
            android:title="自动答题配置" />
        <EditTextPreference
            android:enabled="false"
            android:hint="请输入自定义的js代码"
            android:key="@string/key_custom_answer_config"
            android:summary="请确保代码能正确运行"
            android:title="自定义答题" />
        <SwitchPreference
            android:title="极速模式稳赢"
            android:key="@string/key_quick_mode_must_win"
            android:defaultValue="false" />
        <EditTextPreference
            android:defaultValue="200"
            android:enabled="false"
            android:hint="单位毫秒，默认值200"
            android:inputType="number"
            android:key="@string/key_quick_mode_interval"
            android:title="极速模式模拟答题间隔" />
        <SwitchPreference
            android:key="@string/key_pk_cyclic"
            android:title="循环PK"
            android:defaultValue="false"/>
        <EditTextPreference
            android:key="@string/key_pk_cyclic_interval"
            android:defaultValue="1500"
            android:dependency="@string/key_pk_cyclic"
            android:title="循环时间间隔"
            android:inputType="number"
            android:hint="单位毫秒，默认值1500" />
    </PreferenceCategory>
    <PreferenceCategory android:title="净化">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_remove_ads"
            android:title="去除广告" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_no_nick_cooldown"
            android:title="去除改名时间冷却" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Debug">
        <SwitchPreference
            android:key="@string/key_debug"
            android:title="DEBUG"
            android:summary="没事别开"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="关于">
        <Preference
            android:key="@string/key_github"
            android:title="Github" />
        <Preference
            android:key="@string/key_version"
            android:title="版本" />
    </PreferenceCategory>
</PreferenceScreen>